deployment/spring-boot-auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-auth-service
  namespace: spring-boot-auth
spec:
  selector:
    app: spring-boot-auth  # Match Pods with the label "app: spring-boot-auth"
  ports:
    - protocol: TCP
      port: 8080             # Port exposed by the Service
      targetPort: 8080     # Port on the container (the app inside the Pod)
  type: ClusterIP          # Expose the Service inside the cluster only
